--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "table-columns"
+name = "table-column-doris"
 description = "Simple tools to work with Doris create-table SQL statements."
 authors = [{ name = "Thearas", email = "thearas850@gmail.com" }]
 readme = "README.md"
@@ -17,5 +17,5 @@ classifiers = [
 dependencies = ["sqlparse"]
 
 [project.urls]
-Home = "https://github.com/Thearas/table-columns"
-Source = "https://github.com/Thearas/table-columns"
+Home = "https://github.com/Thearas/table-column-doris"
+Source = "https://github.com/Thearas/table-column-doris"
